created PUT /users/:user_id/projects/:project_id/scopes
